src/components/blocks/story-box/_story-box.scss
.b-story-box {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background-color: siteColor(vam-grey-2);
  color: siteColor(vam-white);
  cursor: pointer;
  display: none;
  flex: 1 1 200px;
  flex-direction: row;
  height: 120px;
  margin: 6px 0;
  text-align: left;
  word-break: normal;

  @include bpMinXSmall {
    margin: 0;
  }

  &--active {
    display: flex;
  }

  &--row {
    @include bpMinXSmall {
      height: 250px;
      width: 100%;
    }
  }

  &--column {
    @include bpMinXSmall {
      flex-direction: column;
      height: 100%;
      margin-bottom: 30px;
      max-height: 478px;
    }

    @include bpMinMedium {
      height: 404px;
      width: 100%;
    }
  }

  &__container-text {
    @include bpMinXSmall {
      margin-top: 20px;
    }

    display: flex;
    flex-direction: column;
    margin-top: 15px;
    &--column {
      @include bpMinXSmall {
        height: 190px;
      }
      width: 100%;
    }
    &--row {
      width: 100%;
      @include bpMinXSmall {
        width: 459px;
      }
    }
  }

  &__container-img {
    background-color: siteColor(vam-grey-4);
    height: 120px;
    width: 150px;

    &--row {
      @include bpMinXSmall {
        flex-basis: 437px;
        flex-shrink: 2;
        height: 250px;
        min-width: 245px;
        width: 100%;
      }
    }

    &--column {
      max-height: 244px;
      min-height: auto;
      overflow: hidden;

      @include bpMinXSmall {
        height: 194px;
        min-height: 140px;
        width: 100%;
      }

      @include bpMinMedium {
        width: 100%;
      }
    }
  }

  &__content {
    &-icon {
      &--column, &--row {
        height: 15px;
        margin-right: 8px;
        width: 13px;
      }
    }

    &-type,
    &-title,
    &-text {
      &--column, &--row {
        margin-bottom: 20px;
        margin-left: 15px;
        margin-right: 15px;
      }
    }

    &-type {
      &-container {
        &--column, &--row {
          @include bpMinXSmall {
            margin-bottom: 14px;
          }

          display: flex;
          margin-bottom: 10px;
          margin-left: 15px;
          margin-right: 15px;
        }
      }

      &-text {
        &--column, &--row {
          @include typeSetting(1, bold, uppercase);
        }
      }
    }

    &-title {
      &--column, &--row {
        @include bpMinXSmall {
          margin-bottom: 0;
        }

        @include typeSetting(3, bold);
        margin-bottom: 0;
        position: relative;

        &:after {
          @include bpMinXSmall {
            display: block;
          }

          background-color: siteColor(vam-white);
          bottom: -9px;
          content: '';
          display: none;
          height: 2px;
          left: 2px;
          position: absolute;
          width: 28px;
        }
      }
    }

    &-text {
      &--row {
        max-height: 120px;
      }

      &--column {
        height: 96px;
      }
      &--column, &--row {
        @include bpMinXSmall {
          display: block;
        }

        @include typeSetting(3, regular);

        display: none;
        margin-top: 20px;
        overflow: hidden;
        word-break: normal;
      }
    }
  }

  &__img {
    &--column, &--row {
      height: auto;
      object-fit: cover;
      width: 100%;
    }
    &--column {
      @include bpMinXSmall {
        height: 194px;
      }
    }
  }
}

